memview: fix alignment of descriptions

--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ h1 {
 .memory-table td {
   border: 1px solid #bdc3c7;
   width: 92px;
-  height: 32px;
+  height: 38px;
   vertical-align: bottom;
   text-align: center;
   position: relative;
@@ -60,9 +60,8 @@ h1 {
   font-size: 12px;
   padding: 2px 4px;
   text-align: left;
-  top: 0;
-  left: 0;
-  transform: translateY(-50%);
+  top: -4px;
+  left: 2px;
   border-radius: 2px;
 }
 
